# lecture-notes-generator

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
lecture_notes_generator/: __init__.py  __main__.py
lecture_notes_generator/lib/: paths.py  render.py  scenes.py  transcribe.py  utils.py  video.py
lecture_notes_generator/templates/: base.html  main.html
tests/: video.veg
